refactor(backend): 安全与规范优化第三批 (P3)
**安全改进**:
- 修复敏感信息日志泄露：DeviceBackupJobService 中 token 仅显示前4位

**数据校验增强**:
- 添加 @Valid 注解：SysUserController, AlertTriggerController, WindowHostController

**事务一致性保障**:
- 批量添加 @Transactional 注解到26+方法（save/update/delete）
  - AlertRecordServiceImpl (delete, close)
  - DeviceBackupRecordServiceImpl (delete)
  - DeviceBackupHistoryServiceImpl (saveHistory)
  - WindowHostServiceImpl (save, update, delete)
  - DeviceBackupServiceImpl (save, update, delete)
  - BackupAgentServiceImpl (save, update, delete)
  - BusinessSystemServiceImpl (save, update, delete)
  - LinuxHostServiceImpl (save, update, delete)
  - MonitorComponentServiceImpl (save, update, delete)
  - AlertMediaServiceImpl (save, update, delete)
  - AlertTemplateServiceImpl (save, update, delete)
  - AlertTriggerServiceImpl (save, update, delete)

**相关任务**: #11, #12, #13

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>